<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentScore"
    android:weightSum="3"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_title_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <!--android:background="@drawable/borderGreen"-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/score"
                android:textStyle="bold" />
        </RelativeLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_timeline_black_24dp"
            android:drawableRight="@drawable/ic_timeline_black_24dp"
            android:gravity="start|end" />


    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:weightSum="2">

        <TableRow
            android:layout_height="match_parent"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/tv_score_nomj1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="#D3D3D3"
                android:drawableEnd="@drawable/ic_fiber_manual_record_black_24dp"
                android:drawableRight="@drawable/ic_fiber_manual_record_black_24dp"
                android:gravity="center"
                android:text="@string/joueur_1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_score_jeu_actuel_j1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/tv_score_jeu1_j1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#D3D3D3"
                android:gravity="center"
                android:text="@string/no_score"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_score_jeu2_j1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no_score"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_score_jeu3_j1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#D3D3D3"
                android:gravity="center"
                android:text="@string/no_score"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_score_nomj2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="#D3D3D3"
                android:drawableRight="@drawable/ic_fiber_manual_record_black_24dp"
                android:gravity="center"
                android:text="@string/joueur_2"
                android:textStyle="bold"
                android:drawableEnd="@drawable/ic_fiber_manual_record_black_24dp" />

            <TextView
                android:id="@+id/tv_score_jeu_actuel_j2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/tv_score_jeu1_j2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#D3D3D3"
                android:gravity="center"
                android:text="@string/no_score"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_score_jeu2_j2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no_score"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_score_jeu3_j2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="#D3D3D3"
                android:gravity="center"
                android:text="@string/no_score"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>

</LinearLayout>