<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentService"
    android:weightSum="3"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_title_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <!--android:background="@drawable/borderGreen"-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_service"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="SERVICE :"
                android:textStyle="bold" />
        </RelativeLayout>

        <Button
            android:id="@+id/buttonChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_sync_black_24dp"
            android:drawableRight="@drawable/ic_sync_black_24dp"
            android:gravity="start|end" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/button_1ere_balle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/border_green"
                android:clickable="true"
                android:text="@string/premiere_balle"
                android:textAllCaps="false"
                android:textColor="#4CAF50"
                android:focusable="true"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/button_2eme_balle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/border_orange"
                android:text="@string/deuxieme_balle"
                android:textAllCaps="false"
                android:textColor="#FF9800" />

            <Button
                android:id="@+id/button_double_faute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/border_red"
                android:onClick="onInputService"
                android:tag="double_faute"
                android:text="@string/double_faute"
                android:textAllCaps="false"
                android:textColor="#E91E63" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/buttonAce_J1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:background="@drawable/border_green"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onInputService"
                android:tag="ace"
                android:text="@string/ace"
                android:textAllCaps="false"
                android:textColor="#4CAF50" />

            <Button
                android:id="@+id/buttonAce_J2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/border_orange"
                android:onClick="onInputService"
                android:tag="ace"
                android:text="@string/ace"
                android:textAllCaps="false"
                android:textColor="#FF9800" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:visibility="invisible" />

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>