<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    tools:context=".NewMatch"
    android:orientation="vertical">
<!--
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:id="@+id/layout_joueurs_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/layout_joueurs_horiz"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/layout_score_joueur1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_joueur1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/nom_joueur_1"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold">
                    </TextView>

                    <EditText
                        android:id="@+id/et_joueur1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_joueur2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tv_joueur2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/nom_joueur_2"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold">
                    </TextView>

                    <EditText
                        android:id="@+id/et_joueur2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/colorPrimaryDark" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/layout_format_match"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_format_match"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/format_du_match"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold">
                </TextView>

                <Spinner
                    android:id="@+id/spinner_format_match"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_format_dernier_set"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_format_dernier_set"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/format_du_dernier_set"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold">
                </TextView>

                <Spinner
                    android:id="@+id/spinner_dernier_set"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_type_coup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_type_coup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/saisir_le_type_du_coup"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold">
                </TextView>

                <Spinner
                    android:id="@+id/spinner_type_coup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>